<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalCount"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:background="#ff9999"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="@+id/button10"
        app:layout_constraintStart_toStartOf="@+id/button10" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="44dp"
        android:background="#ffdb99"
        android:text="@string/_10"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="@+id/button25"
        app:layout_constraintStart_toStartOf="@+id/button25"
        app:layout_constraintTop_toTopOf="@+id/userLimit" />

    <Button
        android:id="@+id/button25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#ffff99"
        android:text="@string/_25"
        app:layout_constraintBottom_toTopOf="@+id/button50"
        app:layout_constraintEnd_toEndOf="@+id/button50"
        app:layout_constraintStart_toStartOf="@+id/button50" />

    <Button
        android:id="@+id/button50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#99ff99"
        android:text="@string/_50"
        app:layout_constraintBottom_toTopOf="@+id/button100"
        app:layout_constraintEnd_toEndOf="@+id/button100"
        app:layout_constraintStart_toStartOf="@+id/button100" />

    <Button
        android:id="@+id/button100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="48dp"
        android:background="#9999ff"
        android:text="@string/_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_consumed"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="@+id/TVConsumed"
        app:layout_constraintStart_toStartOf="@+id/TVConsumed" />

    <TextView
        android:id="@+id/TVConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text=""
        android:textColor="#ff99ff"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/reset"
        app:layout_constraintStart_toStartOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/Label" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:onClick="reset"
        android:text="reset"
        app:layout_constraintBottom_toTopOf="@+id/calorieLink"
        app:layout_constraintEnd_toEndOf="@+id/calorieLink"
        app:layout_constraintStart_toStartOf="@+id/calorieLink" />

    <TextView
        android:id="@+id/calorieLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="88dp"
        android:onClick="carbTracker"
        android:text="Carb Tracker"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="Enter your Caloric Goal"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/userLimit"
        app:layout_constraintEnd_toEndOf="@+id/userLimit"
        app:layout_constraintStart_toStartOf="@+id/userLimit" />

    <EditText
        android:id="@+id/userLimit"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/Label"
        app:layout_constraintStart_toStartOf="@+id/Label"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>

