<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    tools:context="com.monreal.deb.dailyallotment.CalFragment"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:background="#ff9999"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="@+id/button10"
        app:layout_constraintStart_toStartOf="@+id/button10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calorie Counter"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:background="#ffdb99"
        android:text="@string/_10"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="@+id/button25"
        app:layout_constraintStart_toStartOf="@+id/button25" />

    <Button
        android:id="@+id/button25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:background="#ffff99"
        android:text="@string/_25"
        app:layout_constraintBottom_toTopOf="@+id/button50"
        app:layout_constraintEnd_toEndOf="@+id/button50"
        app:layout_constraintStart_toStartOf="@+id/button50" />

    <Button
        android:id="@+id/button50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:background="#99ff99"
        android:text="@string/_50"
        app:layout_constraintBottom_toTopOf="@+id/button100"
        app:layout_constraintEnd_toEndOf="@+id/button100"
        app:layout_constraintStart_toStartOf="@+id/button100" />

    <Button
        android:id="@+id/button100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="46dp"
        android:background="#9999ff"
        android:text="@string/_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:text="@string/calories_consumed"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/TVConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginStart="32dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintStart_toStartOf="@+id/reset" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="123dp"
        android:layout_marginStart="68dp"
        android:text="reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Enter your Caloric Goal"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <EditText
        android:id="@+id/userLimit"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="42dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/Label"
        app:layout_constraintEnd_toEndOf="@+id/limit"
        app:layout_constraintStart_toStartOf="@+id/Label" />


</android.support.constraint.ConstraintLayout>

